Fullscreen Slideshows no longer stretch their images.

--- a/app/assets/stylesheets/slideshow.css.scss
+++ b/app/assets/stylesheets/slideshow.css.scss
@@ -398,7 +398,8 @@ Slideshow Header
 		}
 		*/
 		.av-fullscreen .slideview .slides .slide .media-wrapper img {
-			height: 100%;
+			/*height: 100%;*/
+			height: auto;
 			max-height: auto;
 			width: auto;
 			max-width: auto;
@@ -408,9 +409,11 @@ Slideshow Header
 					padding-top: 30px;
 				}
 				.av-fullscreen .slideview .slides .slide.supports-wideness .media-wrapper img {
+					/*
 					height: auto;
 					max-height: 100%;
 					width: 100%;
+					*/
 				}
 
 		/*
